--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,13 @@
     <artifactId>postgresql</artifactId>
     <version>42.7.1</version>
 </dependency>
+<dependency>
+    <groupId>net.datafaker</groupId>
+    <artifactId>datafaker</artifactId>
+    <version>2.0.2</version>
+</dependency>
+
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
