--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,12 @@
     <artifactId>datafaker</artifactId>
     <version>2.0.2</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
+<dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-core</artifactId>
+    <version>2.16.1</version>
+</dependency>
 
 
 		<dependency>
