feat:creating the api docker images

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 # server.port=8080
 #DataSource Configuration
 spring.datasource.url= jdbc:postgresql://localhost:5432/conduit
-spring.datasource.username={username}
-spring.datasource.password={password}
+spring.datasource.username=postgres
+spring.datasource.password=adeyemi1234
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 logging.level.org.springframework.security= TRACE
 # spring.jpa.hibernate.ddl-auto=create
